2/26/24 new issue btns set to position static on mobile. modal styles improved on mobile for MyStories

--- a/PMT/PMT/Styles/BugTracker/bugTracking.scss
+++ b/PMT/PMT/Styles/BugTracker/bugTracking.scss
@@ -68,8 +68,15 @@
   }
 }
 
-// mobile styles for modal
+// mobile styles
 @media (max-width: $bmaxTablet) {
+  #bugTrackingContent {
+    .report-bug-btn-wrap {
+      position: static;
+      margin-bottom: 2vh;
+    }
+  }
+
   #delBugReportModal {
     .del-bug-report-modal {
       width: 45vw;
